--- a/src/main/net/sf/portecle/resources.properties
+++ b/src/main/net/sf/portecle/resources.properties
@@ -502,9 +502,10 @@ FPortecle.AdditionalProviders=\
 # Default keysizes
 DGenerateKeyPair.DefaultDsaKeySize=1024
 DGenerateKeyPair.DefaultRsaKeySize=2048
+DGenerateKeyPair.DefaultSM2KeySize=256
 DGenerateKeyPair.DsaKeySizes=1024,512
 DGenerateKeyPair.RsaKeySizes=4096,2048,1024,512
-
+DGenerateKeyPair.SM2KeySizes=256
 # Dialog Title
 DGenerateKeyPair.Title=Generate Key Pair
 
@@ -516,11 +517,13 @@ DGenerateKeyPair.Title=Generate Key Pair
 DGenerateKeyPair.jlKeyAlg.text=Key Algorithm:
 DGenerateKeyPair.m_jrbDSA.text=DSA
 DGenerateKeyPair.m_jrbRSA.text=RSA
+DGenerateKeyPair.m_jrbSM2.text=SM2
 DGenerateKeyPair.jlKeySize.text=Key Size:
 
 # Tool tip text
 DGenerateKeyPair.m_jrbDSA.tooltip=DSA key pair generation
 DGenerateKeyPair.m_jrbRSA.tooltip=RSA key pair generation
+DGenerateKeyPair.m_jrbSM2.tooltip=SM2 key pair generation
 DGenerateKeyPair.m_jcbKeySize.tooltip=Key strength in bits
 
 #
@@ -531,6 +534,7 @@ DGenerateKeyPair.KeySizeReq.message=A value for the key size is required.
 DGenerateKeyPair.KeySizeIntegerReq.message=The value of key size must be an integer.
 DGenerateKeyPair.UnsupportedDsaKeySize.message=DSA key sizes less than 512 bits or not a multiple of 64 bits are not supported.
 DGenerateKeyPair.UnsupportedRsaKeySize.message=RSA key sizes less than 512 bits are not supported.
+DGenerateKeyPair.UnsupportedSM2KeySize.message=SM2 key sizes less than 256 bits are not supported.
 
 ############################################################################
 # DGeneratingKeyPair Resources
